# EnglishToLambdaCalculusCompiler

./: .ocamlinit  .submit  README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: lcc.dune-package  lcc.install
_build/default/src/: eval.ml  lcc.cma  lcc.cmxa  lcc.cmxs  lcc.ml-gen  lexer.ml  lexer.mli  parser.ml
_build/default/src/.lcc.objs/: lcc__Eval.impl.d  lcc__Eval.intf.d  lcc__LccTypes.impl.d  lcc__Lexer.impl.d  lcc__Lexer.intf.d  lcc__Parser.impl.d  lcc__Parser.intf.all-deps  lcc__Parser.intf.d
_build/default/src/.lcc.objs/byte/: lcc.cmi  lcc.cmo  lcc.cmt  lcc__Eval.cmi  lcc__Eval.cmo  lcc__Eval.cmt  lcc__Eval.cmti  lcc__LccTypes.cmi  lcc__LccTypes.cmo  lcc__LccTypes.cmt  lcc__Lexer.cmi  lcc__Lexer.cmo  lcc__Lexer.cmt  lcc__Lexer.cmti  lcc__Parser.cmi  lcc__Parser.cmo  lcc__Parser.cmt  lcc__Parser.cmti
_build/default/src/.lcc.objs/native/: lcc.cmx  lcc__Eval.cmx  lcc__LccTypes.cmx  lcc__Lexer.cmx  lcc__Parser.cmx
_build/default/src/.merlin-conf/: lib-lcc
_build/default/src/.utop/: utop.ml-gen
_build/default/src/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/test/public/: oUnit-public.cache
_build/default/test/public/.merlin-conf/: exe-public
_build/default/test/public/.public.eobjs/byte/: dune__exe__Public.cmi  dune__exe__Public.cmti
_build/install/default/lib/lcc/: META  dune-package  opam
src/: dune  eval.ml  eval.mli  lccTypes.ml  parser.ml  parser.mli  readme.md  ref.ml  ref2.ml
test/: dune
test/public/: dune  public.ml
(+1 files in other folders)
